# bismillahdao

./: .dockerignore  .gitignore  dev.Caddyfile  docker-entrypoint.sh  justfile  sshd_config.example
docker/: .env.dev  docker-compose.dev.yaml  docker-compose.prod.yaml
docker/compose/database/: database.dev.yaml
docker/compose/infrastructure/: infra.dev.yaml
docker/compose/muhafidh/: baseer.yaml  migrate.yaml  muhafidh.dev.yaml  raqib.yaml
docker/compose/mutamad/: mpc.dev.yaml  web.dev.yaml
docker/images/: Dockerfile.baseer-dev  Dockerfile.caddy  Dockerfile.keycloak  Dockerfile.migrate-dev  Dockerfile.mpc-dev  Dockerfile.mpc-prod  Dockerfile.muhafidh-dev  Dockerfile.muhafidh-prod  Dockerfile.postgresql  Dockerfile.postgresql-certs  Dockerfile.postgresql-custom  Dockerfile.raqib-dev  Dockerfile.raqib-prod  Dockerfile.twitter-monitor-dev  Dockerfile.twitter-monitor-prod  Dockerfile.web-dev  Dockerfile.web-prod
docker/sccache/: config  credentials
docker/scripts/: README.md  init-database.sh  setup-cron.sh  stop-services-cron.sh
muhafidh/: .env.example  .gitignore  Cargo.toml  Config.example.toml  README.md  docker-compose.example.yml  justfile  rust-toolchain.toml  rustfmt.toml
muhafidh/src/: cex.rs  config.rs  constants.rs  lib.rs  main.rs  utils.rs
muhafidh/src/config/: creator.rs  discord.rs  log.rs  mod.rs  rpc.rs  storage.rs
muhafidh/src/crawler/: mod.rs
muhafidh/src/engine/: baseer.rs  mod.rs  raqib.rs  siraaj.rs
muhafidh/src/engine/baseer/: mod.rs  task.rs
muhafidh/src/error/: config.rs  engine.rs  handler.rs  mod.rs  postgres.rs  redis.rs
muhafidh/src/handler/: mod.rs  shutdown.rs
muhafidh/src/handler/discord/: mod.rs  webhook.rs
muhafidh/src/handler/token/: creator.rs  metadata.rs  mod.rs
muhafidh/src/handler/token_creation/: metadata.rs  mod.rs
muhafidh/src/handler/tracing/: mod.rs
muhafidh/src/model/: cex.rs  creator.rs  dev.rs  mod.rs  platform.rs  token.rs
muhafidh/src/model/creator/: graph.rs  metadata.rs
muhafidh/src/pipeline/: mod.rs
muhafidh/src/pipeline/crawler/: creator.rs  mod.rs
muhafidh/src/pipeline/datasource/: mod.rs  rpc_creator_analyzer.rs
muhafidh/src/pipeline/processor/: creator.rs  mod.rs  pumpfun.rs  raydium_launchpad.rs
muhafidh/src/pipeline/subscriber/: mod.rs  pumpfun.rs
muhafidh/src/processor/: pumpfun.rs
muhafidh/src/rpc/: config.rs  mod.rs
muhafidh/src/storage/: migration.rs  mod.rs
muhafidh/src/storage/in_memory/: creator.rs  mod.rs  model.rs
muhafidh/src/storage/postgres/: db.rs  graph.rs  mod.rs  model.rs  time_series.rs
muhafidh/src/storage/redis/: kv.rs  mod.rs  model.rs  queue.rs
muhafidh/src/subscriber/: pumpfun.rs
muhafidh/src/test_utils/: assertions.rs  fixtures.rs  helpers.rs  mocks.rs  mod.rs
muhafidh/src/testing/: database.rs  mod.rs  redis.rs
muhafidh/src/tracing/: file.rs  filter.rs  format.rs  layer.rs  mod.rs
muhafidh/tests/: README.md  benchmark_creator_processing.rs  integration_creator_metadata.rs  property_bfs_operations.rs  stress_bfs_race_conditions.rs  test_runner.rs  unit_creator_handler.rs
sccache/: config
web/: README.md  justfile
web/backend/: Cargo.toml  justfile  rust-toolchain.toml
web/backend/src/: main.rs
web/backend/src/application/: mod.rs
web/backend/src/application/ports/: mod.rs
web/backend/src/application/ports/in/: mod.rs  user_use_cases.rs
web/backend/src/application/services/: mod.rs  user_service.rs
web/backend/src/domain/: mod.rs
web/backend/src/domain/entities/: user.rs
web/backend/src/domain/repositories/: user_repository.rs
web/backend/src/domain/services/: auth_service.rs
web/backend/src/infrastructure/: mod.rs
web/backend/src/infrastructure/config/: app_config.rs  migrations.rs  mod.rs
web/backend/src/infrastructure/driven/database/: mod.rs  postgres_user_repository.rs
web/backend/src/infrastructure/driving/: mod.rs
web/backend/src/infrastructure/driving/web/: mod.rs
web/backend/src/infrastructure/driving/web/api/: handlers.rs  mod.rs  routes.rs
web/backend/src/infrastructure/driving/web/auth/: handlers.rs
web/backend/src/infrastructure/driving/web/landing/: handlers.rs  mod.rs
web/ui/: Cargo.toml  justfile  package-lock.json  package.json  postcss.config.js  rollup.dev.js  rollup.prod.js  rust-toolchain.toml  styles.css  tailwind.config.js
web/ui/auth/: Cargo.toml
web/ui/auth/src/: app.rs  config.rs  lib.rs
web/ui/auth/src/components/: socials_auth.rs
web/ui/auth/src/components/form/: mod.rs  username_input.rs
web/ui/auth/src/pages/: login.rs  mod.rs  signup.rs
web/ui/auth/src/pages/logins/views/: mod.rs
web/ui/devhtml/: index.auth.html  index.landing.html
web/ui/landing/: Cargo.toml
web/ui/landing/src/: error.rs  lib.rs  router.rs
web/ui/landing/src/components/: loading.rs  mod.rs
web/ui/landing/src/components/buttons/: auth_buttons.rs  mod.rs
web/ui/landing/src/components/form/: email_input.rs
web/ui/landing/src/pages/: login.rs
web/ui/landing/src/pages/logins/: mod.rs  state.rs
web/ui/landing/src/pages/logins/views/: email.rs  forget.rs  mod.rs  password.rs
