[package]
name = "muhafidh"
version = "0.1.0"
edition = "2024"

[lib]
name = "muhafidh"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = "0.7.13"
anyhow = "1.0.80"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
borsh = "1.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.3"
url = "2.5.4"
urlencoding = "2.1.2"
futures = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.83"
async-stream = "0.3.6"
dotenvy = "0.15.7"
clap = { version = "4.5.28", features = ["derive"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
toml = "0.8.22"
rand = "0.9.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

# Database
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.24.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5.1"
redis = { version = "0.32.3", features = ["aio","tokio-comp"] }

# Solana
solana-account = "2.1.6"
solana-account-decoder = "2.1.6"
solana-account-decoder-client-types = "2.1.6"
solana-client = "2.1.16"
solana-clock = "2.1.16"
solana-instruction = { version = "2.1.16", default-features = false }
solana-commitment-config = "2.1.16"
solana-native-token = "2.1.16"
solana-program = "2.1.21"
solana-program-pack = "2.1.21"
solana-pubkey = "2.1.16"
solana-sdk = "2.1.16"
solana-transaction-status = "2.1.16"
solana-signature = "2.1.16"
solana-pubsub-client = "2.1.16"
spl-memo = "6.0.0"
mpl-token-metadata = "5.1.0"
spl-token = "8.0.0"

# carbon
carbon-core = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-log-metrics = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-pump-swap-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-pumpfun-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-system-program-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-token-program-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-token-2022-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-rpc-block-subscribe-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-rpc-program-subscribe-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-rpc-transaction-crawler-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }

# geyser
carbon-yellowstone-grpc-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
yellowstone-grpc-client = { version = "6.1.0" }
yellowstone-grpc-proto = { version = "6.1.0" }

# SSL/TLS
openssl = { version = "0.10" }
native-tls = { version = "0.2" }

[features]
default = ["prod"]
dev = []
prod = []
deep-trace = []
discord_trace = []

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.0"
wiremock = "0.6.2"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["redis", "postgres"] }
proptest = "1.5.0"
criterion = { version = "0.6.0", features = ["html_reports"] }
serial_test = "3.1.1"
temp-env = "0.3.6"
fake = { version = "4.3.0", features = ["derive", "chrono", "uuid"] }
rstest = "0.25.0"
pretty_assertions = "1.4.1"
tokio-stream = { version = "0.1.16", features = ["test-util"] }
test-log = { version = "0.2.16", features = ["trace"] }
env_logger = "0.11.5"

[[bench]]
name = "bfs_performance"
harness = false

[[bench]]
name = "pipeline_throughput"
harness = false
