[package]
name = "r4gmi-auth"
version = "0.1.0"
edition = "2021"
exclude = ["./ui/*"]

resolver = "2"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework
actix-web = "4.0.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"

# Authentication & Security
jsonwebtoken = "9.3.1"
argon2 = "0.5"
rand = "0.9.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "offline", "migrate"] }
uuid = { version = "1.3", features = ["serde", "v4"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Futures and async
futures = "0.3"
async-trait = "0.1.83"

# Config & Environment
config = "0.15.11"
dotenvy = "0.15.6"

# Logging
log = "0.4"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = 3     # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "unwind"  # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["prod"]
dev = []
prod = []