[package]
name = "r4gmi-landing-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.83"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
dominator = "0.5.38"
futures-signals = "0.3.32"
cfg-if = "1.0.0"
log = "0.4.17"
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.17.1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10.2"
url = "2.5.3"
dotenvy = "0.15.7"

[dependencies.web-sys]
version = "0.3.72"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "CssStyleDeclaration",
    "UrlSearchParams",
    "Node",
    "Window",
    "Performance",
    "HtmlFormElement"
]

[features]
default = []
develop = ["wasm-logger", "console_error_panic_hook"]
